Fix super long words breaking out of container

--- a/src/styles/6-components/typography/_components.body-text.scss
+++ b/src/styles/6-components/typography/_components.body-text.scss
@@ -3,4 +3,5 @@
   font-size: $font-size-normal-big;
   margin-top: $spacing-smallest;
   margin-bottom: $spacing-smaller;
+  word-break: break-word;
 }
